# simurg_plotter

./: .gitignore  README.rst  pyproject.toml
multiprocess_sphere_animation/: data_processing.py  main.py
scripts/: animate_sphere.py  multiprocess_animate_sphere.py  plot_sphere.py
simurg_plotter/: __init__.py
simurg_plotter/global_ionospheric_map/: __init__.py  data_processing.py  geo_mag_processing.py  visualization.py
simurg_plotter/ionospheric_pierce_point/: __init__.py  visualization.py
simurg_plotter/map2d/: annotations.py  map2d.py
simurg_plotter/map2d/files/: lats_and_parallels.pkl
simurg_plotter/multiprocess_sphere_animation/: visualization.py
simurg_plotter/sphere_animation/: animation.py  utils.py
sphere_animation/: __init__.py  animation.py  main.py  utils.py
tests/: test_global_ionospheric_map.py  test_sphere_animation.py
tests/temp/: gims.npy  maps.npy
tests/test_global_ionospheric_map/: test_geo_mag_processing.py  test_visualization.py
tests/test_ionospheric_pierce_point/: test_visualization.py
